--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,261 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+header{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+  align-items: center;
+  gap: 20px;
+  padding: 10px 0px 10px 30px;
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
 }
+body {
+  padding-bottom: 30px;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+}
+.main {
+  padding: 20px;
+}
+.main h2 {
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.list-notes {
+  display: flex;
+  justify-content: space-around;
+}
+.to-do-list {
+  width: 60vw;
+  border: 1px solid black;
+  text-align: center;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: beige;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.to-do-list h4 {
+  margin-bottom: 10px;
+}
+.list-area {
+  min-width: 80%;
+  max-width: 90%;
+  width: fit-content;
+  height: 40vh;
+  border: 1px solid black;
+  background-color: white;
+overflow: hidden;
+}
+.notes h4{
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+.notes {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  padding: 10px;
+  text-align: center;
+  min-width: 300px;
+  background-color: aquamarine;
+}
+.notes textarea {
+  height: 100%;
+  resize: none;
+  padding: 10px;
+  height: 100%;
+}
+.add-a-task label{
+  padding: 10px;
+}
+input[type='text']{
+  width: 200px;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+.add-button {
+  padding: 10px;
+  appearance: none;
+  border: none;
+  margin-left: 10px;
+  background-color: aquamarine;
+  border-radius: 10px;
+}
+.add-button:hover {
   cursor: pointer;
-  transition: border-color 0.25s;
+  scale: 1.01;
+  background-color: rgba(127, 255, 212, 0.712);
 }
-button:hover {
-  border-color: #646cff;
+ol {
+  padding: 5px;
+  list-style-type: none;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+li {
+  display: flex;
+  text-align: left;
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  padding-left: 20px;
+  border: 1px solid rgba(55, 55, 55, 0.255);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+#done-button {
+  border: 0;
+  background-color: aquamarine;
+  padding: 4px;
+  margin-left: 20px;
+  
+}
+#done-button:hover {
+  scale: 1.01;
+  cursor: pointer;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+#delete-button {
+  border: 0;
+  background-color: red;
+  padding: 4px;
+  margin-right: 5px;
+}
+#delete-button:hover {
+  scale: 1.01;
+  cursor: pointer;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+.action-buttons {
+  display: flex;
+  gap: 10px;
+  height: fit-content;
+  max-width: 30%;
+}
+.list-items {
+  display: flex;
+  word-wrap: break-word;
+  min-width: 100%;
+}
+.out {
+  display: flex;
+  flex-direction: column;
+}
+.task-output {
+  max-width: 70%;
+}
+.summary-box {
+  min-height: 600px;
+  min-width: 700px;
+  width: fit-content;
+  max-width: 80%;
+  margin-top: 10px;
+  border: 1px solid black;
+  display: flex;
+  padding: 10px;
+  justify-content: space-around;
+  background-color: beige;
+}
+.left-box {
+  width: 45%;
+  border: 1px solid black;
+  text-align: center;
+  padding: 5px;
+  background-color: white;
+}
+.right-box {
+  text-align: center;
+  width: 45%;
+  padding: 5px;
+  border: 1px solid black;
+  background-color: white;
+}
+.main {
+  margin-bottom: 50px;
+}
+.summary-heading {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.clear-all {
+  appearance: none;
+  border: none;
+  background-color: beige;
+  padding: 5px;
+  border-radius: 4px;
+  margin: 10px;
+  width: 70px;
+}
+.clear-all:hover {
+  cursor: pointer;
+  background-color: aquamarine;
+  scale: 1.01;
+}
+.lower-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.done-list {
+  background-color: aquamarine;
+  appearance: none;
+  word-wrap: break-word;
+}
+.task-output {
+  display: flex;
+  align-items: center;
+}
+.undone-list {
+  background-color: red;
+  appearance: none;
+  word-wrap: break-word;
+}
+.left-box h4 {
+  padding: 15px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.right-box h4 {
+  padding: 15px;
+}
+
+@media (max-width: 730px) {
+  .list-notes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  a:hover {
-    color: #747bff;
+  .to-do-list {
+    width: 90vw;
+    margin-bottom: 20px;
   }
-  button {
-    background-color: #f9f9f9;
+  .notes {
+    width: 90vw;
+    height: 300px;
+  }
+  .summary-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .left-box {
+    min-height: 400px;
+    width: 70vw;
+  }
+  .right-box {
+    min-height: 400px;
+    width: 70vw;
+  }
+  .list-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
   }
 }
